Update create playlist service